fix spacing issues in header

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -76,7 +76,7 @@ main {
     flex-flow: row nowrap;
     flex-shrink: 1;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     z-index: 1;
     .logo_container {
